# UI_DATALOGGERV2

DATA_LOGGER/: CMakeLists.txt  DATA_LOGGER.guiguider
DATA_LOGGER/assets/texts/: texts.xml
DATA_LOGGER/contract/: register_map.csv
DATA_LOGGER/custom/: custom.c  custom.h  custom.mk  ui_context.c  ui_context.h  ui_events_navigation.c  ui_events_navigation.h  ui_frontend_api.c  ui_frontend_api.h  ui_input_policy.c  ui_input_policy.h  ui_platform_port.c  ui_platform_port.h  ui_register_adapter.c  ui_register_adapter.h  ui_register_types.h  ui_runtime_guard.c  ui_runtime_guard.h  ui_screen_controller.c  ui_screen_controller.h  ui_state.c  ui_state.h
DATA_LOGGER/custom/backend/: modbus_config_service.c  modbus_config_service.h  ui_app_param_bridge.c  ui_app_param_bridge.h  ui_form_read.c  ui_form_read.h  ui_frontend_api.c  ui_frontend_api.h  ui_modbus_backend.c  ui_modbus_backend.h  ui_platform_port.c  ui_platform_port.h  ui_pub.c  ui_pub.h  ui_sub.c  ui_sub.h  ui_time_bridge.c  ui_time_bridge.h  ui_time_service.c  ui_time_service.h
DATA_LOGGER/custom/components/: cmp_dashboard.c  cmp_dashboard.h  cmp_modbus_list.c  cmp_modbus_list.h  ui_dashboard.c  ui_dashboard.h  ui_modbus_list.c  ui_modbus_list.h
DATA_LOGGER/custom/controllers/: ctrl_input.c  ctrl_input.h  ctrl_navigation.c  ctrl_navigation.h  ctrl_screen.c  (+8 more)
DATA_LOGGER/docs/: ui-backend-register-contract.md
DATA_LOGGER/libs/: CMakeLists.txt
DATA_LOGGER/lvgl-simulator/: lv_conf.h
DATA_LOGGER/sim/: ui_sim_backend.c  ui_sim_backend.h
DATA_LOGGER/temp/: board.h
DATA_LOGGER/tests/: check_ui_register_adapter.ps1  check_ui_register_boundary.ps1  check_ui_register_map.ps1
DATA_LOGGER/tools/: gen_ui_register_map.py
(+21 files in other folders)
